# gigli

./: .gitignore  Cargo.llvm.toml  Cargo.toml  LICENSE  README.md  build.rs  gigli.config.json  gigli.toml  giglioptix.toml
.github/workflows/: release.yml
compiler/: Cargo.toml  build.rs
compiler/src/: ast.rs  cli.rs  lexer.rs  main.rs  parser.rs  semantic.rs
compiler/src/backends/: wasm.rs
compiler/src/ir/: generator.rs  mod.rs
compiler/tests/: compile_tests.rs  lexer_tests.rs  parser_tests.rs
docs/: BROWSER_GUIDE.md  COMPLETE_GUIDE.md  LLVM_VERSION.md  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md  gigli-spec.md  giglioptix-cli-enhancements.md  giglioptix-quickstart.md  giglioptix-sample-program.md  giglioptix-spec.md
examples/: calculator.gx  counter.gx  game.gx  hello.gx  todo.gx  weather.gx
gigli-npm/: README.md  gigli-0.1.0.tgz  install.js  package.json
public/docs/: gigli-compiler-optimizations.md  gigli-quickstart.md
public/gigli-npm/: README.md  gigli-0.2.0.tgz  package.json
public/scripts/: build.ps1  install.sh  release.ps1  setup.ps1
scripts/: build-all.sh  build-web.ps1  build-web.sh  build.ps1  dev-server.js  install.ps1  install.sh  run-dev.sh  setup-wsl.ps1
src/cli/: Cargo.toml
src/cli/src/: bundle.rs  cli.rs  main.rs
src/codegen/llvm/: Cargo.toml
src/codegen/llvm/src/: lib.rs
src/codegen/wasm/: Cargo.toml
src/codegen/wasm/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: ast.rs  lexer.rs  lib.rs  parser.rs  semantic.rs
src/core/src/ir/: generator.rs  mod.rs
src/lsp/: Cargo.toml
src/lsp/src/: lsp.rs  main.rs
src/runtime/js/: Cargo.toml
src/runtime/js/src/: lib.rs
src/std/: Cargo.toml
src/std/src/: browser.rs  io.rs  lib.rs  list.rs  map.rs  option.rs  result.rs  time.rs
tools/: format.sh  install-deps.sh
tools/public/: app.js  index.html  webpack.config.js
web/: app.js  index.html
