[package]
name = "gigli-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["wasm"]
wasm = []
llvm = ["inkwell", "gigli-codegen-llvm"]

[[bin]]
name = "gigli"
path = "src/main.rs"

[dependencies]
gigli-core = { path = "../core" }
gigli-codegen-wasm = { path = "../codegen/wasm" }
gigli-codegen-llvm = { path = "../codegen/llvm", optional = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Optional LLVM support
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"], optional = true }
