[package]
name = "gigli-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core language implementation for GigliOptix"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
pest.workspace = true
pest_derive.workspace = true

[dev-dependencies]
criterion.workspace = true
