[package]
name = "gigli-codegen-llvm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "LLVM backend for GigliOptix"
license.workspace = true
repository.workspace = true

[dependencies]
gigli-core = { path = "../../core" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"], optional = true }
anyhow.workspace = true
log.workspace = true
