[package]
name = "gigli-codegen-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WebAssembly backend for GigliOptix"
license.workspace = true
repository.workspace = true

[dependencies]
gigli-core = { path = "../../core" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
anyhow.workspace = true
log.workspace = true
