[package]
name = "gigli-runtime-js"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "JavaScript runtime for GigliOptix"
license.workspace = true
repository.workspace = true

[dependencies]
gigli-core = { path = "../../core" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
anyhow.workspace = true

[features]
wee_alloc = []
